--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Timing and magnitude of climate driven range shifts in transboundary fish stocks challenge their management"
-author: 'Juliano Palacios-Abrantes, Thomas L. Frölicher, Gabriel Reygondeau, U. Rashid Sumaila, Alessandro Tagliabue, Colette C.C. Wabnitz, and William W.L. Cheung'
-output:
-  # bookdown::word_document2
-    bookdown::pdf_document2:
-    toc : no
-    keep_tex: no
-    number_sections: yes
+title: "Supplemental material for: Timing and magnitude of climate driven range shifts in transboundary fish stocks challenge their management"
+date: 'Juliano Palacios-Abrantes, Thomas L. Frölicher, Gabriel Reygondeau, U. Rashid Sumaila, Alessandro Tagliabue, Colette C.C. Wabnitz, and William W.L. Cheung'
+output: 
+  bookdown::pdf_document2:
+    number_section: no
+    toc: no
+    latex_engine: xelatex
+reference_docx:  ../References/sci_template.docx
 header-includes:
 - \usepackage{float} #use the 'float' package
 - \floatplacement{figure}{H} #make every figure with caption = h
@@ -14,6 +14,7 @@ header-includes:
 - \usepackage{caption}
 - \captionsetup[figure]{name = Figure S}
 - \captionsetup[table]{name = Table S}
+- \usepackage{lscape}
 ---
 
 ```{r setup_sup, eval = T, echo=F, warning=F,message=F, results='hide'}
@@ -32,22 +33,9 @@ my_lib(packages)
 
 
 
-# Supplemental Figures
+# Figures
 
-S1
-
-```{r toeFigureS2, eval = T,  echo = F, fig.width=12, fig.height=7, fig.cap ="Year of change in the shared distribution of 5,745 transboundary stocks using a one standard deviation threshold. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. EEZs with no distributional shift between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represents the year 2030 – the Sustainable Development Agenda deadline. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
-
-img <- readPNG("../Figures/FigS2.png")
-grid.raster(img)
-
-```
-
-\clearpage
-
-S2
-
-```{r toeFigureS8, eval = T,  echo = F, fig.width=6, fig.height=6, fig.cap ="Average distribution of transboundary stock’s year of change in their shared distribution. Left panel is the average year across stocks and right panel the standard deviation. Yellow represents a one standard deviation distance from the historical average and purple represents a two standard deviation distance from the historical average."}
+```{r toeFigureS5, eval = T,  echo = F, fig.width = 10, fig.height= 8, fig.pos="H", fig.cap ="World Exclusive Economic Zones used in this study as divided by the Sea Around Us and their estimated centroids (black points)."}
 
 img <- readPNG("../Figures/FigS7.png")
 grid.raster(img)
@@ -55,43 +43,6 @@ grid.raster(img)
 ```
 
 \clearpage
-
-S3
-
-```{r toeFigureS1, eval = T,  echo = F, fig.width=9, fig.height=7,fig.pos= "H", fig.cap =  "Comparison of shifts in the shared distribution of transboundary stocks by species’ habitat association. Classification is based on the habitat preference information obtained from FishBase and SeaLifeBase (see Table S1). The category “Other” consists of species that have no “habitat preference” classification. The number of stocks included in this analysis for each habitat type is noted in parentheses. Dashed whiskers represent the 1.5* interquartile range. Box represents interquartile range as distance between first and third quartiles. Solid line represents the median time of emergence per habitat preference."}
-
-img <- readPNG("../Figures/FigS1.png")
-grid.raster(img)
-
-```
-
-
-\clearpage
-
-S4
-
-```{r toeFigureS3, eval = T,  echo = F, fig.width=7, fig.height=5, fig.cap = "Distribution of changes in transboundary stock proportion per stock and neighboring Exclusive Economic Zones. Yellow color represents changes by early, 2030 (2021-2040) and purple by mid 2050 (2041-60) 21st century relative to 1951-2005."}
-
-img <- readPNG("../Figures/FigS3.png")
-grid.raster(img)
-
-```
-
-\clearpage
-
-S5
-
-```{r toeFigureS4, eval = T,  echo = F, fig.width=14, fig.height=7, fig.cap ="Changes in stock proportion of neighboring Exclusive Economic Zones by 2050 (2041-2060) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
-
-img <- readPNG("../Figures/FigS4.png")
-grid.raster(img)
-
-```
-
-\clearpage
-
-S6
-
 
 ```{r toeFigureS7, eval = T,  echo = F, fig.width=14, fig.height=10, fig.cap =  "Average year of range shift by Exclusive Economic Zone (EEZ) and transboundary stock using different levels of abundance percentile to determine the stock’s centroid. Top Row: results in absolute numbers. Bottom row: results expressed as a percentage of the total emerging stocks and EEZs with emerging stock."}
 
@@ -102,9 +53,47 @@ grid.raster(img)
 
 \clearpage
 
-S7
+```{r toeFigureS2, eval = T,  echo = F, fig.width=13, fig.height=13, fig.cap ="Year of change in the shared distribution of 5,745 transboundary stocks using a one standard deviation threshold. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. EEZs with no distributional shift between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represents the year 2030 – the Sustainable Development Agenda deadline. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
 
-```{r toeFigureS5, eval = T,  echo = F, fig.width=4, fig.height=4, fig.cap =  "World Exclusive Economic Zones used in this study as divided by the Sea Around Us and their estimated centroids (black points)."}
+img <- readPNG("../Figures/FigS1.png")
+grid.raster(img)
+
+```
+
+\clearpage
+
+
+```{r toeFigureS8, eval = T,  echo = F, fig.width=4, fig.height=4, fig.cap ="Average distribution of transboundary stock’s year of change in their shared distribution. Left panel is the average year across stocks and right panel the standard deviation. Yellow represents a two standard deviation distance from the historical average and purple represents a one standard deviation distance from the historical average."}
+
+img <- readPNG("../Figures/FigS2.png")
+grid.raster(img)
+
+```
+
+\clearpage
+
+
+```{r toeFigureS1, eval = T,  echo = F, fig.width=9, fig.height=6,fig.pos= "H", fig.cap =  "Comparison of shifts in the shared distribution of transboundary stocks by species’ habitat association. Classification is based on the habitat preference information obtained from FishBase and SeaLifeBase (see Table S1). The category “Other” consists of species that have no “habitat preference” classification. The number of stocks included in this analysis for each habitat type is noted in parentheses. Dashed whiskers represent the 1.5* interquartile range. Box represents interquartile range as distance between first and third quartiles. Solid line represents the median time of emergence per habitat preference."}
+
+img <- readPNG("../Figures/FigS3.png")
+grid.raster(img)
+
+```
+
+
+\clearpage
+
+
+```{r toeFigureS3, eval = T,  echo = F, fig.width=7, fig.height=5, fig.cap = "Distribution of changes in transboundary stock proportion per stock and neighboring Exclusive Economic Zones. Yellow color represents changes by early, 2030 (2021-2040) and purple by mid 2050 (2041-60) 21st century relative to 1951-2005."}
+
+img <- readPNG("../Figures/FigS4.png")
+grid.raster(img)
+
+```
+
+\clearpage
+
+```{r toeFigureS4, eval = T,  echo = F, fig.width=14, fig.height=14, fig.cap ="Changes in stock proportion of neighboring Exclusive Economic Zones by 2050 (2041-2060) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
 
 img <- readPNG("../Figures/FigS5.png")
 grid.raster(img)
@@ -114,7 +103,8 @@ grid.raster(img)
 \clearpage
 
 
-_**Tables**_
+
+# Tables
 
 
 ```{r toeTableS1, eval = T, echo = F}
@@ -132,22 +122,24 @@ tibble(
     "Living and feeding in the open sea; associated with the surface or middle depths of a body of water; free swimming in the seas, oceans or open waters; not in association with the bottom. Many pelagic fish feed on plankton. In FishBase, referring to surface or mid water from 0 to 200 m depth."
   )
 ) %>% 
-  write.csv(.,"habitat_preference.csv")
+  # write.csv(.,"habitat_preference.csv")
  kable(
         booktabs = T,
+        # longtable = T,
         caption = "Definition of each habitat preference according to FishBase"
-  ) #%>% 
-  # kable_styling(full_width = F,
-                # position = "center")
+  ) %>%
+  kable_styling(full_width = T,
+                position = "center")
+
 
 
 ```
 
 \clearpage
 
-```{r toeTableS3, eval = F, echo = F}
+```{r toeTableS3, eval = T, echo = F}
 
-read.csv("~/GitHub/TransEmergence/Tables/kw_habitat.csv") %>% 
+read.csv("../Tables/kw_habitat.csv") %>% 
   select(-statistic,
          "Sub region comparrison" = comparrison,
          "Significan level" = signif.level,
@@ -156,18 +148,21 @@ read.csv("~/GitHub/TransEmergence/Tables/kw_habitat.csv") %>%
           "K-W Difference" = dif.com.difference) %>% 
   kable(
         booktabs = T,
+        longtable = T,
         caption = "Statistical results for multiple comparison test after Kruskal-Wallis on time of emergence across United Nations sub regions"
-  ) #%>% 
-  # kable_styling(full_width = F,
-                # position = "center")
+  ) %>% 
+  kable_styling(#full_width = T,
+                position = "center")
 
 ```
 
 \clearpage
 
-```{r toeTableS2, eval = F, echo = F}
+\begin{landscape}
 
-read.csv("~/GitHub/TransEmergence/Tables/kw_regional.csv") %>% 
+```{r toeTableS2, eval = T, echo = F}
+
+read.csv("../Tables/kw_regional.csv") %>% 
   select(-statistic,
          "habitat association comparrison" = comparrison,
          "Significan level" = signif.level,
@@ -176,9 +171,14 @@ read.csv("~/GitHub/TransEmergence/Tables/kw_regional.csv") %>%
           "K-W Difference" = dif.com.difference) %>% 
   kable(
         booktabs = T,
+        longtable = T,
         caption = "Statistical results for multiple comparison test after Kruskal-Wallis on time of emergence across United Nations sub regions"
-  ) #%>% 
-  # kable_styling(full_width = F,
-                # position = "center")
+  ) %>% 
+  kable_styling(#full_width = T,
+                # position = "center",
+                latex_options = c("repeat_header")
+                )
 
 ```
+
+\end{landscape}
